--- a/Android/cambioagora/res/layout/main.xml
+++ b/Android/cambioagora/res/layout/main.xml
@@ -3,10 +3,32 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" 
-    android:background="#F0F8FF">
+    android:background="@color/background">
         <ListView 
             android:id="@+id/list_currency"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content" 
+            android:layout_weight="2" >
+
         </ListView>
+		<LinearLayout 
+		    android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" 
+            android:layout_weight="1">
+            
+	        <TextView
+	            android:id="@+id/font"
+	            android:layout_width="wrap_content"
+	            android:layout_height="match_parent"
+	            android:text="@string/txt_font" />
+	        
+	        <TextView
+	            android:id="@+id/font_link"
+	            android:layout_marginLeft="5sp"
+	            android:autoLink="web"
+	            android:layout_width="wrap_content"
+	            android:layout_height="match_parent" 
+	            android:text="@string/txt_font_link" />
+        </LinearLayout>
 </LinearLayout>
